# dots-dwm

./: .gitignore  README.md  README_CN.md  advice.txt  deploy.sh
X_configs/: .Xresources  .xinitrc
code_config/: keybindings.json  settings.json
dunst/: dunstrc
gdb/: .gdbinit  gdbinit_bak
kitty/: kitty.conf
lazygit/: config.yml
my_code_template/cmake/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt
my_code_template/cmake/src/: main.cpp
my_nix_flakes/: flake.nix
my_nix_flakes/modules/: default.nix  ostep-python.nix  xv6.nix
nix/: nix.conf
nix-config/: flake.nix
nvim/: init.lua  lazy-lock.json
nvim/lua/config/: autocmds.lua  keymaps.lua  options.lua
nvim/lua/plugins/: blink-cmp.lua  blink_cmp.lua  conform.lua  copilot.lua  flash.lua  gitsigns.lua  lualine.lua  mini-statusline.lua  neo-tree.lua  nvim-lint.lua  nvim-lspconfig.lua  nvim-treesitter.lua  nvim_lint.lua  telescope.lua  which-key.lua
picom/: picom.conf
scripts/: battery_checker.sh  dwm_status.sh  wifi_fucking_rescan.sh
shell_config/bash/: .bashrc
shell_config/fish/: config.fish  fish_variables
systemd/user/: battery.service  battery.timer
vim_config_bak/: .vimrc
yazi/: yazi.toml
